--- a/maven2/pom.xml
+++ b/maven2/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.idemia</groupId>
     <artifactId>maven2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>logic</module>
+        <module>app</module>
+    </modules>
 
-    
 </project>
